--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en"><head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +9,7 @@
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
-          rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
     <style type="text/css">
 
       /* Large desktop */
@@ -98,16 +96,15 @@
         color: #ccccff;
       }
     </style>
-  </head>
-  <body>
+  <style type="text/css"></style></head>
+  <body style="">
 
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar"
-                  data-toggle="collapse" data-target=".nav-collapse">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -145,7 +142,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://www.sxc.hu/pic/l/k/kr/krappweis/1424311_43501548.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -200,7 +197,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://cdnbakmi.kaltura.com/p/695492/sp/69549200/thumbnail/entry_id/1_3rpiskre/width/0/height/0">
         </div>
         <div class="span5 copy">
           <p>
@@ -217,7 +214,7 @@ For only a small investment, you'll become part of this movement and change hist
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://www.sxc.hu/pic/l/k/kr/krappweis/1410436_41785368.jpg">
         </div>
       </div>
 
@@ -230,12 +227,11 @@ For only a small investment, you'll become part of this movement and change hist
             <div class="accordion" id="accordion2">
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseOne">
+                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
                     What does FAQ stand for?
                   </a>
                 </div>
-                <div id="collapseOne" class="accordion-body collapse">
+                <div id="collapseOne" class="accordion-body collapse" style="height: 0px;">
                   <div class="accordion-inner">
                     Frequently Asked Question.
                   </div>
@@ -243,12 +239,11 @@ For only a small investment, you'll become part of this movement and change hist
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseTwo">
+                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
                     Why should you trust us?
                   </a>
                 </div>
-                <div id="collapseTwo" class="accordion-body collapse">
+                <div id="collapseTwo" class="accordion-body in collapse" style="height: auto;">
                   <div class="accordion-inner">
 Today, technology has reached the point where miniature cats are no longer an impossible dream. We have the tools and the experience to bring our work in the lab to you, our wonderful supporters.
                   </div>
@@ -271,6 +266,7 @@ Today, technology has reached the point where miniature cats are no longer an im
         </div>
       </div>
     </div>
-  </body>
-</html>
+  
 
+
+</body></html>
